WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178099
It should not be possible to submit a form that is disconnected
https://bugs.webkit.org/show_bug.cgi?id=178099
Summary
It should not be possible to submit a form that is disconnected
Chris Dumez
Reported
2017-10-09 15:55:13 PDT
It should not be possible to submit a form that is disconnected. Both Firefox and Chrome agree with the specification. This is as per:
https://html.spec.whatwg.org/multipage/form-control-infrastructure.html#form-submission-algorithm
(step 1) which refers to:
https://html.spec.whatwg.org/multipage/links.html#cannot-navigate
Form cannot navigate because it is disconnected. Test:
http://w3c-test.org/dom/events/Event-dispatch-click.html
(disconnected form should not submit)
Attachments
WIP Patch
(1.25 KB, patch)
2017-10-09 16:51 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews103 for mac-elcapitan
(1.04 MB, application/zip)
2017-10-09 17:56 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews107 for mac-elcapitan-wk2
(1.11 MB, application/zip)
2017-10-09 18:02 PDT
,
Build Bot
no flags
Details
Patch
(5.02 KB, patch)
2017-10-09 18:21 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2017-10-09 16:51:17 PDT
Created
attachment 323243
[details]
WIP Patch
Build Bot
Comment 2
2017-10-09 17:56:31 PDT
Comment on
attachment 323243
[details]
WIP Patch
Attachment 323243
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/4806510
New failing tests: imported/w3c/web-platform-tests/html/semantics/forms/the-button-element/button-click-submits.html
Build Bot
Comment 3
2017-10-09 17:56:32 PDT
Created
attachment 323258
[details]
Archive of layout-test-results from ews103 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 4
2017-10-09 18:02:11 PDT
Comment on
attachment 323243
[details]
WIP Patch
Attachment 323243
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/4806537
New failing tests: imported/w3c/web-platform-tests/html/semantics/forms/the-button-element/button-click-submits.html
Build Bot
Comment 5
2017-10-09 18:02:12 PDT
Created
attachment 323260
[details]
Archive of layout-test-results from ews107 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Chris Dumez
Comment 6
2017-10-09 18:21:15 PDT
Created
attachment 323264
[details]
Patch
WebKit Commit Bot
Comment 7
2017-10-09 20:19:26 PDT
Comment on
attachment 323264
[details]
Patch Clearing flags on attachment: 323264 Committed
r223117
: <
http://trac.webkit.org/changeset/223117
>
WebKit Commit Bot
Comment 8
2017-10-09 20:19:27 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9
2017-10-09 20:20:07 PDT
<
rdar://problem/34902006
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug